[package]
name = "barotrauma_conflict_finder"
version = "0.1.0"
authors = ["FoLZer"]
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
clap = { version = "*", features = ["derive"] }
log = { version = "*", features = ["std"] }
iced = { version = "0.13.1", features = ["highlighter"] }
iced_core = "*"
strum = { version = "*", features = ["derive"] }
asset_parser = { path = "../asset_parser" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"